Fixed layout bug with landing page layout at higher & lower resolutions

--- a/styles/landing.module.css
+++ b/styles/landing.module.css
@@ -5,9 +5,9 @@
     padding: 14rem;
     padding-top: 19rem;
     color: white;
-    min-height: 100%;
-    min-width: 100%;
-    height: auto;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
 .firstContainer {
@@ -16,6 +16,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
+    max-width: 70rem;
 }
 
 .childContainer {
